feat: add PageMeta component for managing page metadata with react-helmet-async

--- a/index.html
+++ b/index.html
@@ -1,11 +1,37 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/logo2-removebg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/src//index.css">
-    <title>Portfolio Vlad</title>
+    
+    <title>Portafolio de Vlad | Desarrollador de Software</title>
+    <meta name="description" content="Portafolio de Vlad, un desarrollador de software con más de 3 años de experiencia especializado en JavaScript, TypeScript, y React. Explora mis proyectos, habilidades y experiencia." />
+    <meta name="keywords" content="desarrollador de software, portfolio, vlad, javascript, typescript, react, node.js, desarrollador web, programador" />
+    <meta name="author" content="Vlad" />
+    <meta name="robots" content="index, follow" />
+
+    <!-- Favicon -->
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="URL_DEL_PORTAFOLIO_AQUI" />
+    <meta property="og:title" content="Portafolio de Vlad | Desarrollador de Software" />
+    <meta property="og:description" content="Portafolio de Vlad, un desarrollador de software con más de 3 años de experiencia." />
+    <meta property="og:image" content="URL_DE_IMAGEN_PREVIEW_AQUI" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="URL_DEL_PORTAFOLIO_AQUI" />
+    <meta property="twitter:title" content="Portafolio de Vlad | Desarrollador de Software" />
+    <meta property="twitter:description" content="Portafolio de Vlad, un desarrollador de software con más de 3 años de experiencia." />
+    <meta property="twitter:image" content="URL_DE_IMAGEN_PREVIEW_AQUI" />
+
+    <meta name="theme-color" content="#000000" />
+
+    <link rel="stylesheet" href="/src/index.css">
   </head>
   <body>
     <div id="root"></div>
