feat: Add Angular blog microfrontend integration and performance optimization documentation
- Created blog post on integrating Angular and React using Web Components.
- Added performance optimization strategies for SPAs including code splitting, lazy loading, and memoization.
- Implemented server-side rendering setup for Angular application.
- Established a PowerShell and Bash script for starting the development environment.
- Developed a React component for displaying the Angular blog as a microfrontend.
- Configured TypeScript settings for Angular project.
- Added global styles to match portfolio theme.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta name="robots" content="index, follow" />
 
     <!-- Favicon -->
-    <link rel="icon" href="/favicon.ico" sizes="any" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="src/assets/logo2-removebg.webp" sizes="any" />
+    <link rel="icon" href="src/assets/logo2-removebg.webp" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
     <!-- Open Graph / Facebook -->
