--- a/microfrontends/angular-blog/src/index.html
+++ b/microfrontends/angular-blog/src/index.html
@@ -1,13 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Vlad Dev Blog</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="logo2-removebg.webp">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <title>Vlad Dev Blog</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="logo2-removebg.webp">
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
